# digital-memoirs

./: .gitignore  CHANGELOG.md  README.md  TODO.md  app.py  pyproject.toml  simple_hotspot.sh
.github/: CLAUDE.md
scripts/: AUTOSTART_BROWSER.md  CAPTIVE_POSSIBLE_FIX.md  INSTALL_SERVICE.md  README_SCRIPTS.md  SOLUCION_TIMEOUT.md  app-maybe-fixed.py  autostart_browser.sh  digital-memoirs-FIXED.service  digital-memoirs-NO-DELAY.service  digital-memoirs-autostart.desktop  install_service.sh  qr_option_c.html  setup_autostart.sh
scripts/hotfixes/: upload-fixed-1.html
scripts/reference/: README.md
scripts/reference/hotfixes/: README.md
scripts/reference/services/: README.md  digital-memoirs.service
scripts/reference/templates/: README.md  qr_option_b.html  qr_option_c.html
scripts/testing/: README.md
scripts/testing/diagnostics/: README.md  diagnose_service.sh
scripts/testing/network/: README.md
templates/: display.html  index.html  qr.html  slideshow.html  subir.html  upload.html
